Добавил JWT авторизацию
