# internal/application/dtos/user_dto.go
@@ -10,3 +10,13 @@ type UserCreateDTO struct {
 type UserCreatedDTO struct {
 	UserId int
 }
+
+type AuthorizeDTO struct {
+	Username string
+	Password string
+}
+
+type TokensDTO struct {
+	AccessToken string
+	RefreshToken string
+}
