# internal/presentation/routers/auth_router.go
@@ -11,6 +11,7 @@ func WithAuthRouter(handler *handlers.AuthHander) Option {
 	return func(router chi.Router) {
 		router.Route("/auth", func(r chi.Router) {
 			r.Post("/register", handler.CreateUser)
+			r.Post("/login", handler.Authorization)
 		})
 	}
 }
