# internal/presentation/schemas/auth_schema.go
@@ -5,7 +5,16 @@ type UserCreatedSchema struct {
 }
 
 type CreateUserSchema struct {
-	Username string `json:"username"`
-	Email string `json:"email"`
-	Password string `json:"password"`
+	Username string `json:"username" example:"maximEZ"`
+	Email string `json:"email" example:"maxim@mail.ru"` 
+	Password string `json:"password" example:"1Q2w3e"`
+}
+
+type AuthorizeSchema struct {
+	Username string `json:"username" example:"maximEZ"`
+	Password string `json:"password" example:"1Q2w3e"`
+}
+
+type TokensSchema struct {
+	AccessToken string `json:"access_token"`
 }
